force-app/main/default/objects/Superior_Court__c/Superior_Court__c.object-meta.xml
<CustomObject>
    <label>Superior Court</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Superior Court Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Superior Court</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>