force-app/main/default/objects/Superior_Court__c/fields/Superior_Court_Address__c.field-meta.xml
<CustomField>
    <fullName>Superior_Court_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Superior Court Address</label>
    <type>TextArea</type>
</CustomField>