force-app/main/default/objects/Superior_Court__c/fields/Superior_Court_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Superior_Court_Fax_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Superior Court Fax Number</label>
    <type>Phone</type>
</CustomField>